Prevent panels from overflowing out of smaller screens (#4230)

--- a/src/sentry/static/sentry/less/misc.less
+++ b/src/sentry/static/sentry/less/misc.less
@@ -52,3 +52,7 @@ span.translation-wrapper {
     border: 3px solid #FF4D3D;
     border-radius: 3px;
 }
+
+.horizontal-scroll {
+	overflow-x: auto;
+}
